Added toggle dark mode without functionality

--- a/src/app/pages/main-layout/main-layout.component.html
+++ b/src/app/pages/main-layout/main-layout.component.html
@@ -8,4 +8,10 @@
         <router-outlet></router-outlet>
     </div>
 
+    <div class="dark-mode-toggle">
+        <p>
+            Toggle Dark Mode
+        </p>
+    </div>
+
 </div>
